trying to make api docs work
